@@ -78,7 +78,8 @@ class Client(object):
             LIBPHOBOS_ADMIN.phobos_admin_fini(byref(self.handle))
             self.handle = None
 
-    def fs_format(self, media_list, nb_streams, fs_type, unlock=False):
+    def fs_format(self, media_list, nb_streams, fs_type, unlock=False, # pylint: disable=too-many-arguments
+                  force=False):
         """Format media through the LRS layer."""
         fs_type = fs_type.lower()
         if fs_type == 'ltfs':
@@ -101,7 +102,8 @@ class Client(object):
                                                  len(media_list),
                                                  nb_streams,
                                                  fs_type_enum,
-                                                 unlock)
+                                                 unlock,
+                                                 force)
         if rc:
             raise EnvironmentError(rc,
                                    "Failed to format every medium in '%s'" %
