@@ -2,6 +2,8 @@
 
 ## Ongoing
 
+* The "phobos_admin_format" API function has been modified to be able to format
+media whose status is not blank. A "force" parameter is added to manage this.
 * Grouped read algorithm for tapes
 * Locate update for pre-locking
     - We add two new parameters to the "phobos_locate" API call: 'focus_host'
